fixed footer to change based on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
     }
 
     .footer {
-        @apply absolute inset-x-1/2 bottom-5 items-center flex flex-row justify-center;
+        @apply inset-x-1/2 bottom-5 items-center flex flex-row justify-center;
     }
 
     .education-card {
